--- a/.github/ISSUE_TEMPLATE/1.issue.yml
+++ b/.github/ISSUE_TEMPLATE/1.issue.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ### ⚠️ 前置确认
+        ### ⚠️ 前置确认 (温馨提示: 未star项目会被自动关闭issue哦!)
         1. 你的环境是否与本文档中的建议一致？
         2. 是否完全按照本文档进行部署？
         3. 单台服务器最低规格是否 > 4C8G？
